fix url cloaking
